[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lnai"
version = "0.1.0"
description = "Research code for transformer-based option valuation, forecasting, and trading experiments."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Jarosław A. Chudziak" },
  { name = "Feliks Bańka" }
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "pyarrow>=14.0",
  "scikit-learn>=1.4",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.11.0"
]

[project.scripts]
lnai-clean-data = "lnai.data.cleaning:main"
lnai-deep-baselines = "lnai.experiments.deep_baselines:main"
lnai-train-all = "lnai.experiments.train_all_models:main"
lnai-aggregate-results = "lnai.experiments.aggregate_results:main"

[tool.setuptools.packages.find]
include = ["lnai*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
  "Autoformer",
  "FEDformer",
  "Informer2020",
  "Pyraformer"
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"lnai/analysis/ml.py" = ["F401"]
